# Sparkify

./: .gitignore  .pre-commit-config.yaml  README.md  create_tables.py  etl.ipynb  etl.py  pyproject.toml  pytest.ini  sql_queries.py
.github/: pull_request_template.md
.github/workflows/: liting-test.yml
sparkifydb/: __init__.py
sparkifydb/core/: settings.py
sparkifydb/db/: mappers.py  repository.py  session.py  tables.py
sparkifydb/domain/: __init__.py  model.py  models.py
tests/: conftest.py
tests/unit/: test_domain_models.py  test_packaging_semantic_version.py  test_settings.py
