[tool.poetry]
name = "sparkify"
version = "0.1.0"
description = "Data Modeling with Postgres"
authors = ["HTRUJILLO <htrujillo@lucta.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
pandas = "^1.4.0"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
